# solverRos2_ws

./: .gitignore  README.md  amcl.yaml  frames_2025-10-29_14.27.29.gv  frames_2025-10-29_18.00.35.gv  frames_2025-10-29_18.02.33.gv  frames_2025-10-31_11.11.59.gv  map_1761949958.yaml
config/: ps4.config.yaml
solver_apriltags/: package.xml  setup.cfg  setup.py
solver_apriltags/config/: camera.yaml
src/solver_balloons/: package.xml  setup.cfg  setup.py
src/solver_balloons/launch/: balloon_detection.launch.py
src/solver_balloons/solver_balloons/: balloon_detector.py
src/solver_camera/: package.xml  setup.cfg  setup.py
src/solver_camera/launch/: logitech_c270.launch.py
src/solver_cartographer/: CMakeLists.txt  package.xml
src/solver_cartographer/config/: solver.lua
src/solver_cartographer/launch/: cartographer.launch.py  mapping_full.launch.py
src/solver_cartographer/maps/: solver_map.yaml
src/solver_description/: CMakeLists.txt  package.xml
src/solver_description/launch/: view_urdf.launch.py
src/solver_description/meshes/: base_link.stl  left_wheel_1.stl  left_wheel__1__1.stl  rigth_wheel_1.stl  rigth_wheel__1__1.stl
src/solver_description/urdf/: materials.xacro  sin.gazebo  sin.trans  sin.xacro  solverbot.urdf  solverbot.xacro
src/solver_localization/: package.xml  setup.cfg  setup.py
src/solver_localization/config/: ekf_localization.yaml  ekf_test_imu.yaml  robot_params.yaml
src/solver_localization/launch/: ekf.launch.py  ekf_localization.launch.py  localization_system.launch.py  nav2_localization.launch.py  rtabmap_rgbd.launch.py  solver_nav_base.launch.py
src/solver_localization/scripts/: rotate_360.py
src/solver_localization/solver_localization/: debug_ekf_input_node.py  imu_tf_broadcaster.py
src/solver_mapping/: package.xml  setup.cfg  setup.py
src/solver_mapping/config/: slam_toolbox.yaml
src/solver_mapping/launch/: slam_toolbox_localization.launch.py  slam_toolbox_online.launch.py
src/solver_md49/: package.xml  setup.cfg  setup.py
src/solver_md49/config/: md49_defaults.yaml
src/solver_md49/launch/: solver_system.launch.py  solver_system_full.launch.py
src/solver_md49/resource/: solver_md49
src/solver_md49/solver_md49/: md49_node.py
src/solver_navigation/: CMakeLists.txt  package.xml  setup.py
src/solver_navigation/config/: nav2_params.yaml  navigate_solver_recovery.xml  solver_nav2_full.rviz
src/solver_navigation/config/bt_trees/: solver_bt.xml
src/solver_navigation/launch/: bringup.launch.py  nav2_bringup.launch.py  nav2_localization.launch.py  nav2_with_rviz.launch.py  teleop_ps4.launch.py
src/solver_navigation/solver_navigation/: initial_pose_publisher.py  map_save_on_button.py
src/solver_odometry/: package.xml  setup.cfg  setup.py
src/solver_odometry/config/: hardware.yaml
src/solver_odometry/resource/: solver_odometry
src/solver_odometry/solver_odometry/: odometry_node.py
src/solver_sensors/: package.xml  setup.cfg  setup.py
src/solver_sensors/config/: imu_serial.yaml
src/solver_sensors/solver_sensors/: imu_serial_node.py
src/solver_sim/: package.xml  setup.cfg  setup.py
src/solver_velocity/: package.xml  setup.cfg  setup.py
src/solver_velocity/solver_velocity/: solver_velocity_node.py  velocity_util.py
src/urg_node/launch/: urg_node_ethernet.yaml  urg_node_launch.py
