<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solver_md49</name>
  <version>0.0.1</version>
  <description>Python MD49 motor controller node</description>

  <maintainer email="atwork@example.com">atwork</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
