<package format="3">
  <name>solver_odometry</name>
  <version>0.0.1</version>
  <description>Odometry computation from MD49 encoders for Solver robot</description>
  <maintainer email="atwork@example.com">atwork</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>solver_kinematics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
