<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solver_odometry</name>
  <version>0.0.1</version>
  <description>Odometry integration from /vel_raw for Solver robot.</description>

  <maintainer email="atwork@example.com">atwork</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <!-- No existe solver_kinematics y no se usa, eliminado -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
